# gfog

./: .gitignore  LICENSE.txt  README.md  install.sh  main.py  pyproject.toml  requirements.txt  setup.py
examples/: testfunction_example.py  testfunctions.py
examples/gymnasium/: cartpole.py  pyproject.toml
examples/testfunctions/: example.py  example_gif.py  example_himmelblau.py  example_hirarchical.py  example_mishra.py  functions.py  plotting.py  testfunction_example.py  testfunctions.py
optimgan/: buffer.py  optimgan.py  utils.py
src/adversa/: __init__.py
src/adversa/adversa/: __init__.py  base.py  opt_fn.py  wasserstein.py
src/adversa/buffer/: base.py
src/gfog/: __init__.py  curiosity.py  models.py  utils.py
src/gfog/buffer/: __init__.py  base.py  buffer.py  buffer_new.py  buffer_new_2.py  buffer_new_fixed.py  default.py  hirarchical.py  simple.py
src/gfog/buffer/buffer_core/: Cargo.toml  pyproject.toml
src/gfog/curiosity/: __init__.py  curiosity.py  scheduler.py
src/gfog/models/: __init__.py  dcgan.py  mlp.py  pix2pix_models.py
src/gfog/opt/: __init__.py  base.py  components.py  default.py  latent_sample.py  latents_sampler.py
src/gfog/opt/optimizers/: base.py  default.py  random.py  wasserstein.py
src/optimgan/: __init__.py  buffer.py  buffer_old.py  models.py  optimgan.py  utils.py
src/optimgan/_mlx/: models.py  optimgan.py
src/optimgan/_torch/: optimgan.py
src/optimgan/buffer/: __init__.py  default.py  hirarchical.py
src/optimgan/optimgan/: __init__.py  base.py  default.py  random.py  wasserstein.py
(+2 files in other folders)
