[project]
name = "adverse"
version = "0.1.0"
description = "Gradient free optimization via gradients"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "seaborn>=0.13.2",
    "sortedcontainers>=2.4.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]
